# lidar

./: README.md  README_EN.md
Burn/1.burn/: Version.txt  configuration.ini
Burn/1.burn/soni/: RegFilter.bat
Burn/2.paraments/HV0111127C0254/: HV0111127C0254_320.pb  HV0111127C0254_640.pb
Burn/3.Firmware burning tool/: XY---CS20-V1-------------2108200201.src
ROS/: Synexens ROS使用说明.docx
ROS/ROS1/: Readme.txt  Synexens ROS1 instructions-V-1.0.1.docx
ROS/ROS2/: Readme.txt  Synexens ROS2 instructions -V1.0.0-EN.docx
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/: package.xml
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/ext/sdk/examples/: CMakeLists.txt  depth.cpp  pointcloud.cpp
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/launch/: driver.launch
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/rviz/: view.rviz
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu20.04arm64-noetic/Synexens_ROS_Driver/ext/sdk/include/: version.h
ROS/synexens_ros1v1.0.0-sdkv0.2.5-20220825/ubuntu20.04arm64-noetic/Synexens_ROS_Driver/ext/sdk/opencv/: libopencv_gapi.so.4.4.0  libopencv_highgui.so.4.4.0
ROS/synexens_ros2v1.0.0-sdkv0.6.1.0-20230222/: SDK固件版本说明 .txt  Synexens ROS2使用说明.docx
ROS/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/debian/: postinst
ROS/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/include/synexens_ros_driver/: synexens_ros_device.h  synexens_ros_device_params.h
ROS/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/launch/: viewer.launch
ROS/ubuntu18.04amd64-melodic/Synexens_ROS_Driver/src/: synexens_ros_device.cpp
ROS/ubuntu20.04arm64-noetic/Synexens_ROS_Driver/ext/sdk/opencv/: libopencv_calib3d.so.4.4.0  libopencv_photo.so.4.4.0  libopencv_video.so.4.4.0
SDK/: Readme.txt
SDK/libsynexens3-armv7/libsynexens3-v0.2.5/examples/: CMakeLists.txt
SDK/libsynexens3-ubuntu18.04_amd64/libsynexens3-v0.2.5/examples/: CMakeLists.release  CMakeLists.txt  burn-intrinsics.cpp  raw.cpp
SDK/libsynexens3-ubuntu20.04arm64/libsynexens3-v0.2.5/examples/: CMakeLists.txt
SDK/libsynexens3-windows10_x64/libsynexens3-v0.2.5/examples/: depth.cpp
SDK/v0.2.5-20220825/libsynexens3-armv7/libsynexens3-v0.2.5/include/: version.h
SDK/v0.2.5-20220825/libsynexens3-ubuntu20.04_amd64/libsynexens3-v0.2.5/examples/: CMakeLists.txt
SDK/v0.2.5/libsynexens3-ubuntu18.04_amd64/libsynexens3-v0.2.5/examples/: hello-synexens3.cpp
SDK/v0.7.3.0/: libsynexens3 SDK instructions-V1.3-EN-20230308.docx
Windows.GUI.Viewer/CredimensionViewer-v3.1.19/: Version.txt  configuration.ini
Windows.GUI.Viewer/CredimensionViewer-v3.1.19/RGBD/20220915204916_tof/: Depth[1]-1920x1080.raw
Windows.GUI.Viewer/CredimensionViewer-v3.1.19/soni/: UnRegFilter.bat
Windows.GUI.Viewer/CredimensionViewer-v3.2.0.8/: Version.txt
